// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dbsize.sql > line 1 1`] = `
[
  "SELECT size, pg_size_pretty(size), pg_size_pretty(-1 * size) FROM
    (VALUES (10::bigint), (1000::bigint), (1000000::bigint),
            (1000000000::bigint), (1000000000000::bigint),
            (1000000000000000::bigint)) x(size)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeSubselect": {
                  "alias": {
                    "aliasname": "x",
                    "colnames": [
                      {
                        "String": {
                          "sval": "size",
                        },
                      },
                    ],
                  },
                  "subquery": {
                    "SelectStmt": {
                      "limitOption": "LIMIT_OPTION_DEFAULT",
                      "op": "SETOP_NONE",
                      "valuesLists": [
                        {
                          "List": {
                            "items": [
                              {
                                "TypeCast": {
                                  "arg": {
                                    "A_Const": {
                                      "ival": {
                                        "ival": 10,
                                      },
                                      "location": 79,
                                    },
                                  },
                                  "location": 81,
                                  "typeName": {
                                    "location": 83,
                                    "names": [
                                      {
                                        "String": {
                                          "sval": "pg_catalog",
                                        },
                                      },
                                      {
                                        "String": {
                                          "sval": "int8",
                                        },
                                      },
                                    ],
                                    "typemod": -1,
                                  },
                                },
                              },
                            ],
                          },
                        },
                        {
                          "List": {
                            "items": [
                              {
                                "TypeCast": {
                                  "arg": {
                                    "A_Const": {
                                      "ival": {
                                        "ival": 1000,
                                      },
                                      "location": 93,
                                    },
                                  },
                                  "location": 97,
                                  "typeName": {
                                    "location": 99,
                                    "names": [
                                      {
                                        "String": {
                                          "sval": "pg_catalog",
                                        },
                                      },
                                      {
                                        "String": {
                                          "sval": "int8",
                                        },
                                      },
                                    ],
                                    "typemod": -1,
                                  },
                                },
                              },
                            ],
                          },
                        },
                        {
                          "List": {
                            "items": [
                              {
                                "TypeCast": {
                                  "arg": {
                                    "A_Const": {
                                      "ival": {
                                        "ival": 1000000,
                                      },
                                      "location": 109,
                                    },
                                  },
                                  "location": 116,
                                  "typeName": {
                                    "location": 118,
                                    "names": [
                                      {
                                        "String": {
                                          "sval": "pg_catalog",
                                        },
                                      },
                                      {
                                        "String": {
                                          "sval": "int8",
                                        },
                                      },
                                    ],
                                    "typemod": -1,
                                  },
                                },
                              },
                            ],
                          },
                        },
                        {
                          "List": {
                            "items": [
                              {
                                "TypeCast": {
                                  "arg": {
                                    "A_Const": {
                                      "ival": {
                                        "ival": 1000000000,
                                      },
                                      "location": 140,
                                    },
                                  },
                                  "location": 150,
                                  "typeName": {
                                    "location": 152,
                                    "names": [
                                      {
                                        "String": {
                                          "sval": "pg_catalog",
                                        },
                                      },
                                      {
                                        "String": {
                                          "sval": "int8",
                                        },
                                      },
                                    ],
                                    "typemod": -1,
                                  },
                                },
                              },
                            ],
                          },
                        },
                        {
                          "List": {
                            "items": [
                              {
                                "TypeCast": {
                                  "arg": {
                                    "A_Const": {
                                      "fval": {
                                        "fval": "1000000000000",
                                      },
                                      "location": 162,
                                    },
                                  },
                                  "location": 175,
                                  "typeName": {
                                    "location": 177,
                                    "names": [
                                      {
                                        "String": {
                                          "sval": "pg_catalog",
                                        },
                                      },
                                      {
                                        "String": {
                                          "sval": "int8",
                                        },
                                      },
                                    ],
                                    "typemod": -1,
                                  },
                                },
                              },
                            ],
                          },
                        },
                        {
                          "List": {
                            "items": [
                              {
                                "TypeCast": {
                                  "arg": {
                                    "A_Const": {
                                      "fval": {
                                        "fval": "1000000000000000",
                                      },
                                      "location": 199,
                                    },
                                  },
                                  "location": 215,
                                  "typeName": {
                                    "location": 217,
                                    "names": [
                                      {
                                        "String": {
                                          "sval": "pg_catalog",
                                        },
                                      },
                                      {
                                        "String": {
                                          "sval": "int8",
                                        },
                                      },
                                    ],
                                    "typemod": -1,
                                  },
                                },
                              },
                            ],
                          },
                        },
                      ],
                    },
                  },
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "size",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 13,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "size",
                                },
                              },
                            ],
                            "location": 28,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_size_pretty",
                          },
                        },
                      ],
                      "location": 13,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 35,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Expr": {
                            "kind": "AEXPR_OP",
                            "lexpr": {
                              "A_Const": {
                                "ival": {},
                                "location": 50,
                              },
                            },
                            "location": 53,
                            "name": [
                              {
                                "String": {
                                  "sval": "*",
                                },
                              },
                            ],
                            "rexpr": {
                              "ColumnRef": {
                                "fields": [
                                  {
                                    "String": {
                                      "sval": "size",
                                    },
                                  },
                                ],
                                "location": 55,
                              },
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_size_pretty",
                          },
                        },
                      ],
                      "location": 35,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`dbsize.sql > line 31 1`] = `
[
  "SELECT size, pg_size_bytes(size) FROM
    (VALUES ('1'), ('123bytes'), ('256 B'), ('1kB'), ('1MB'), (' 1 GB'), ('1.5 GB '),
            ('1TB'), ('3000 TB'), ('1e6 MB'), ('99 PB')) x(size)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeSubselect": {
                  "alias": {
                    "aliasname": "x",
                    "colnames": [
                      {
                        "String": {
                          "sval": "size",
                        },
                      },
                    ],
                  },
                  "subquery": {
                    "SelectStmt": {
                      "limitOption": "LIMIT_OPTION_DEFAULT",
                      "op": "SETOP_NONE",
                      "valuesLists": [
                        {
                          "List": {
                            "items": [
                              {
                                "A_Const": {
                                  "location": 51,
                                  "sval": {
                                    "sval": "1",
                                  },
                                },
                              },
                            ],
                          },
                        },
                        {
                          "List": {
                            "items": [
                              {
                                "A_Const": {
                                  "location": 58,
                                  "sval": {
                                    "sval": "123bytes",
                                  },
                                },
                              },
                            ],
                          },
                        },
                        {
                          "List": {
                            "items": [
                              {
                                "A_Const": {
                                  "location": 72,
                                  "sval": {
                                    "sval": "256 B",
                                  },
                                },
                              },
                            ],
                          },
                        },
                        {
                          "List": {
                            "items": [
                              {
                                "A_Const": {
                                  "location": 83,
                                  "sval": {
                                    "sval": "1kB",
                                  },
                                },
                              },
                            ],
                          },
                        },
                        {
                          "List": {
                            "items": [
                              {
                                "A_Const": {
                                  "location": 92,
                                  "sval": {
                                    "sval": "1MB",
                                  },
                                },
                              },
                            ],
                          },
                        },
                        {
                          "List": {
                            "items": [
                              {
                                "A_Const": {
                                  "location": 101,
                                  "sval": {
                                    "sval": " 1 GB",
                                  },
                                },
                              },
                            ],
                          },
                        },
                        {
                          "List": {
                            "items": [
                              {
                                "A_Const": {
                                  "location": 112,
                                  "sval": {
                                    "sval": "1.5 GB ",
                                  },
                                },
                              },
                            ],
                          },
                        },
                        {
                          "List": {
                            "items": [
                              {
                                "A_Const": {
                                  "location": 137,
                                  "sval": {
                                    "sval": "1TB",
                                  },
                                },
                              },
                            ],
                          },
                        },
                        {
                          "List": {
                            "items": [
                              {
                                "A_Const": {
                                  "location": 146,
                                  "sval": {
                                    "sval": "3000 TB",
                                  },
                                },
                              },
                            ],
                          },
                        },
                        {
                          "List": {
                            "items": [
                              {
                                "A_Const": {
                                  "location": 159,
                                  "sval": {
                                    "sval": "1e6 MB",
                                  },
                                },
                              },
                            ],
                          },
                        },
                        {
                          "List": {
                            "items": [
                              {
                                "A_Const": {
                                  "location": 171,
                                  "sval": {
                                    "sval": "99 PB",
                                  },
                                },
                              },
                            ],
                          },
                        },
                      ],
                    },
                  },
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "size",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 13,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "size",
                                },
                              },
                            ],
                            "location": 27,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_size_bytes",
                          },
                        },
                      ],
                      "location": 13,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`dbsize.sql > line 51 1`] = `
[
  "SELECT pg_size_bytes('1 AB')",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 21,
                            "sval": {
                              "sval": "1 AB",
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_size_bytes",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
